kubernetes/deploy/home/metamcp/metamcp/clusters/bastion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metamcp
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - metamcp
  rules:
    - host: metamcp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metamcp
                port:
                  number: 12008
